--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "alaouy/youtube": "^2.2",
+        "doctrine/dbal": "^3.1",
         "fabpot/goutte": "^3.2",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
