--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
     "jquery": "^3.1.1",
-    "laravel-mix": "0.*",
+    "laravel-mix": "*",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
-  }
+    "vue": "^2.1.10",
+    "webpack": "^5.58.1"
+  },
+  "dependencies": {}
 }
